tests/NormalTests/paczka1/small_fuzzy/69276164.err
Error in line 4: WlUF S556 46,8
Error in line 1: aMNwUlb A349 79,1
Error in line 8: aMNwUlb S576 18,0
